--- a/src/main/resources/prodaja-server.properties
+++ b/src/main/resources/prodaja-server.properties
@@ -2,8 +2,13 @@ server.port=8001
 
 spring.datasource.url=jdbc:mysql://localhost:3306/prodaja
 spring.datasource.username=root
-spring.datasource.password=erppassword
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
